--- a/style.css
+++ b/style.css
@@ -5,15 +5,30 @@
 }
 
 body {
-    height: 100vh;
-    height: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1350&q=80');
 }
 
-main.caixa-maior {
+header {
+    text-align: center;
+    padding: 20px;
+}
+
+main.caixa-principal {
+    height: 95vh;
+    height: 95vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header h1 {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    
+}
+
+.caixa-maior {
     background-color: #000000d3;
     border-radius: 25px;
     padding: 20px;
@@ -44,6 +59,7 @@ button {
 
 .img-busca {
     width: 20px;
+    font-size: 18px;
 }
 
 .caixa-media {
@@ -74,4 +90,24 @@ div.caixa-menor {
 
 .umidade {
     margin-top: 20px;
+}
+
+footer {
+    text-align: center;
+    font-size: 15px;
+    margin-top: 20px;
+    padding: 5px;
+}
+
+footer p {
+    font-weight: 600;
+}
+
+footer a {
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
 }
